<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/activity_margin"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textColor="@color/registerTextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_title_01"
        android:textColor="#7F7F7F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/intro_input_phone_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/border_spinner">

            <Spinner
                android:id="@+id/countries_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_icon"
                android:dividerHeight="0dp"
                android:dropDownWidth="match_parent"
                android:dropDownHeight="200dp"
                android:dropDownVerticalOffset="0dp"
                android:elevation="0dp"
                android:popupBackground="@drawable/intro_input_phone_background"
                android:spinnerMode="dropdown"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry"
                tools:listitem="@layout/item_country" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/country_code"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/delimeter_spinner"
                android:enabled="false"
                android:paddingStart="24dp"
                android:text="@string/country_coude"
                android:textColor="@color/color_primary_dark"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:digits="0123456789+()-"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:paddingStart="16dp"
                android:textColor="@color/color_primary_dark"
                android:textColorHint="#7F7F7F"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <CheckBox
            android:id="@+id/cb_term_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/registerTextColor"
            android:checked="false"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_of_use"
            android:textColor="#7F7F7F"
            android:textSize="12sp" />


    </LinearLayout>

    <Button
        android:id="@+id/get_code"
        style="@style/button_style_dark_blue"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/get_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/already_had_account"
        android:textColor="#7F7F7F"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="@color/registerTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>