<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/booking_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="@drawable/filter_layout_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingTop="24dp"
                android:paddingEnd="12dp"
                android:paddingBottom="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/request_booking_text"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_close"
                    style="@style/Button.Style.Close"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date_text"
                    android:textColor="@color/color_primary_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <www.kaznu.kz.projects.m2.views.customviews.DatePickerView
                        android:id="@+id/calendar_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical"
                android:windowActionBarOverlay="true">

                <EditText
                    android:id="@+id/tv_price_per_day"
                    style="@style/EditText.Style.Price"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/price_per_day_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_request_text"
                    android:textColor="@color/color_primary_hint"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/final_price_text"
                        android:textColor="@color/color_primary_hint"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/default_total_price_text"
                        android:textColor="@color/color_primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_send_booking_request"
                style="@style/Button.Style.DarkBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:padding="8dp"
                android:text="@string/send_request_text" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>