<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/activity_margin"
    tools:context=".views.activities.ChangeDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="horizontal"
                android:paddingBottom="18dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView.Style.BigBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/change_profile_password" />


                    <EditText
                        android:id="@+id/old_password"
                        style="@style/EditText.Style.Email"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:background="@drawable/view_profile_button_background"
                        android:hint="@string/enter_old_password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/new_password"
                        style="@style/EditText.Style.Email"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:background="@drawable/view_profile_button_background"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword" />


                    <EditText
                        android:id="@+id/renew_password"
                        style="@style/EditText.Style.Email"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:background="@drawable/view_profile_button_background"
                        android:hint="@string/reenter_password"
                        android:inputType="textPassword" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_code"
            style="@style/Button.Style.DarkBlue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>